tests/snapshots/render__azure_details_80.snap
---
source: tests/render.rs
expression: "plain_with(\"tests/fixtures/azure-devops/details.md\", \"80\", &\n[\"--flavor\", \"azure-devops\"])"
---
# Details
────────────────────────────────────────────────────────────────────────────────

▾ Deployment steps
│ 1. Build the artifact.
│ 2. Run the smoke tests.
│
│ ┌───────┬────────┐
│ │ Stage │ Owner  │
│ ├───────┼────────┤
│ │ build │ team-a │
│ │ test  │ team-b │
│ └───────┴────────┘

Text after the block.
