tests/snapshots/render__azure_malformed_80.snap
---
source: tests/render.rs
expression: "plain_with(\"tests/fixtures/azure-devops/malformed.md\", \"80\", &\n[\"--flavor\", \"azure-devops\"])"
---
# Malformed extensions
────────────────────────────────────────────────────────────────────────────────

A fenced block containing macro-like text, which must stay literal:

╭─ text
│ [[_TOC_]]
│ [[_TOSP_]]
│ ::: mermaid
│ graph LR
│ :::
╰─

A bare ::: on its own is ordinary text:

:::

An unknown container keeps its body:

[not-a-real-container] Unsupported ::: not-a-real-container block
│ this text must survive

A container that is never closed ends at the blank line, so the rest of the
document stays readable:

╭─ mermaid
│ ┌───┐     ┌───┐
│ │   │     │   │
│ │ A ├────►│ B │
│ │   │     │   │
│ └───┘     └───┘
╰─

Text after the unterminated container.
