tests/snapshots/render__azure_showcase_as_gfm_80.snap
---
source: tests/render.rs
expression: "plain_with(\"tests/fixtures/azure-devops/showcase.md\", \"80\", &\n[\"--flavor\", \"gfm\"])"
---
# Azure DevOps Wiki showcase
────────────────────────────────────────────────────────────────────────────────

[[TOC]]

## Work items and mentions
────────────────────────────────────────────────────────────────────────────────

Fixed #1234 after review by @jane.doe and @build-team.

## Math
────────────────────────────────────────────────────────────────────────────────

Inline math $E = mc^2$ is shown as source, and so is $$\sum_{i=1}^{n} i$$.

## Table with cell breaks
────────────────────────────────────────────────────────────────────────────────

┌───────┬──────────────────────┐
│ Stage │ Notes                │
├───────┼──────────────────────┤
│ build │ compile<br/>package  │
│ test  │ unit<br/>integration │
└───────┴──────────────────────┘

## Details
────────────────────────────────────────────────────────────────────────────────

<details><summary>Rollback plan</summary>

Revert the release branch and redeploy the previous tag.

</details>

## Diagram
────────────────────────────────────────────────────────────────────────────────

::: mermaid graph LR A[Plan] --> B[Build] --> C[Ship] :::

## Attachments
────────────────────────────────────────────────────────────────────────────────

[image: architecture diagram]
(tests/fixtures/azure-devops/.attachments/architecture.png)

design.xlsx (tests/fixtures/azure-devops/.attachments/design.xlsx)

[[TOSP]]
