tests/snapshots/render__gfm_alerts_40.snap
---
source: tests/render.rs
expression: "plain(\"tests/fixtures/gfm/alerts.md\", \"40\")"
---
# Alerts
────────────────────────────────────────

╭─ Note
│ Useful information that users should
│ know, even when skimming content.
╰─

╭─ Tip
│ Helpful advice for doing things better
│ or more easily.
╰─

╭─ Important
│ Key information users need to know to
│ achieve their goal.
╰─

╭─ Warning
│ Urgent info that needs immediate user
│ attention to avoid problems.
╰─

╭─ Caution
│ Advises about risks or negative
│ outcomes of certain actions.
╰─

## An alert holding other blocks
────────────────────────────────────────

╭─ Note
│ A note with a list and some code.
│ • first item
│ • second item
│   ◦ nested item
│
│ ╭─ rust
│ │ fn main() {}
│ ╰─
╰─

## Not an alert
────────────────────────────────────────

│ [!FOO] An unrecognised kind stays a
│ plain quote and keeps its first line.

│ A plain quote, for contrast.

╭─ Warning
╰─

An alert with no body at all still shows
its label.

## Wrapping
────────────────────────────────────────

╭─ Important
│ A long alert body that has to wrap at
│ a narrow terminal width, so the border
│ and the label stay aligned with the
│ text under them.
╰─
